# DNDS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DNDS_Array.hpp  DNDS_AutoDiff.hpp  DNDS_BasicTypes.hpp  DNDS_CR.hpp  DNDS_Defines.cpp  DNDS_Defines.h  DNDS_DerivedArray.hpp  DNDS_DerivedTypes.hpp  DNDS_Dimension.hpp  DNDS_Elements.cpp  DNDS_Elements.hpp  DNDS_Elements_Prebuild.cpp  DNDS_Elements_Prebuild.h  DNDS_Experimentals.h  DNDS_FV_CR.cpp  DNDS_FV_CR.hpp  DNDS_FV_EikonalCRSolver.hpp  DNDS_FV_EulerEvaluator.cpp  DNDS_FV_EulerEvaluator.hpp  DNDS_FV_EulerSolver.cpp  DNDS_FV_EulerSolver.hpp  DNDS_FV_JR.hpp  DNDS_FV_Limiters.hpp  DNDS_FV_VR.cpp  DNDS_FV_VR.hpp  DNDS_Gas.hpp  DNDS_GasGen.hpp  DNDS_HardEigen.cpp  DNDS_HardEigen.h  DNDS_IndexMapping.hpp  DNDS_Linear.hpp  DNDS_MPI.cpp  DNDS_MPI.hpp  DNDS_Macros.h  DNDS_Mesh.cpp  DNDS_Mesh.hpp  DNDS_Mesh_Prebuild.cpp  (+27 more)
data/: eikonal_config.json  euler2D_config.json  eulerSA_config.json  eulerSA_config_BL.json  eulerSA_config_BenchSA.json  eulerSA_config_wingA.json  euler_config.json  euler_config_2DRiemann.json  euler_config_DMR.json  euler_config_DMRTest.json  euler_config_IV.json  euler_config_RT.json  euler_config_Tube.json  euler_config_boxA.json  euler_config_boxB.json  euler_config_wingA.json  euler_config_wingB.json  staticRecEuler_config.json  viewErr.ipynb  viewErr.py  viewLogErr.ipynb
data/matlab/: FlogAna.m  logAnaThesis.m  perfs.m  perfsVES.m  staticRecSum.m
data/matlab/PeriodicTest/: Int_Line.m  Int_Quad.m  test.m  testInt.asv  testInt.m  testPeriodic.m
data/mesh/: 30P30N_H2.msh  30P30N_H2_C.msh  CylinderBM_1.msh  CylinderBM_U2.msh  NACA0012_SW_0_Euler.msh  NACA0012_TIP_NS.msh  NACA0012_TIP_SPARSE_EULER.msh  NACA0012_WIDE_H3.msh  NACA0012_WIDE_H3_NS.msh  NACA0012_WIDE_H3_O2.msh  NACA0012_WIDE_H3_O2_F.msh  Uniform128.msh  in.msh
data/mesh/Uniform/: UniformA0.msh  UniformA1.msh  UniformA2.msh  UniformA3.msh  UniformA4_Euler.msh  UniformAR00_0.msh  UniformAR00_1.msh  UniformAR00_2.msh  UniformAR00_3.msh  UniformB0.msh  UniformB1.msh  UniformB2.msh  UniformB3.msh  UniformD100.msh
notes/: RBF_VFV.tex  Summary_RBFVRCR.docx  ~$组会20220506.pptx  中期汇报_RBFVFV.pptx  中期汇报_RBFVFV_T1.pptx  组会20220325.pptx  组会20220422.pptx  组会20220506.pptx
test/: adtest.cpp  cgnstest.cpp  eikonal.cpp  elemtest.cpp  euler.cpp  euler.exe.bkp1  euler2D.cpp  eulerSA.cpp  gmrestest.cpp  meshtest.cpp  mpitest.cpp  staticRecEuler.cpp  staticReconstructionTest.cpp  staticReconstructionTestJR.cpp  test.cpp  testGas.cpp  testTensor.cpp
test/autoDiffGen/: code.txt  genRoe.cpp  genRoeTest.cpp  genVis.cpp  genVisTest.cpp  makefile
test/matlab/: chemData_7_8H2Air.m  data_RoeTopo_Orig.m
test/stashed/: DNDS_GasNovel.hpp
test/testground/: fA.cpp  fB.cpp  mpitestHsend.cpp  mpitestHsend_2.cpp  testCopy.cpp  testEigen.cpp  testFAB.cpp  testGas  testGas.cpp  testLimit.cpp  testWSL.cpp  testmod.cpp
utilities/: InterpTest.py  O1Gmsh.py
